@@ -1,3 +1,7 @@
+2005-07-21 zunda <zunda at freeshell.org>
+	* tdiary/defaultio.rb DefaultIO#restore(): move rescue clause later:
+	  IO#read in ruby-1.8.0 returns not "" but nil when reading over EOF
+
 2005-07-21 TADA Tadashi <sho@spc.gr.jp>
 	 * doc/HOWTO-make-plugin.html: correct charset ISO-2022-JP to EUC-JP.
 
